# CodeBoarding

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PYPI.md  README.md  REVIEW.md  constants.py  github_action.py  health_main.py  install.py  logging_config.py  main.py  pyproject.toml  user_config.py  utils.py  vscode_constants.py
.codeboarding/: analysis.json  codeboarding_version.json  file_coverage.json
.codeboarding/health/: health_report.json
.github/workflows/: build-tools.yml  docs.yml  integration-tests.yml
agents/: abstraction_agent.py  agent.py  agent_responses.py  change_status.py  cluster_budget.py  cluster_methods_mixin.py  constants.py  details_agent.py  llm_config.py  meta_agent.py  model_capabilities.py  planner_agent.py  retry.py  validation.py
agents/prompts/: abstract_prompt_factory.py  claude_prompts.py  deepseek_prompts.py  gemini_flash_prompts.py  glm_prompts.py  gpt_prompts.py  kimi_prompts.py  prompt_factory.py
agents/tools/: read_file_structure.py  toolkit.py
caching/: __init__.py  cache.py  details_cache.py  meta_cache.py
codeboarding_cli/: __init__.py  bootstrap.py
codeboarding_cli/commands/: full_analysis.py  incremental_analysis.py  partial_analysis.py
codeboarding_workflows/: __init__.py  analysis.py  incremental.py  orchestration.py  rendering.py
codeboarding_workflows/sources/: __init__.py  local.py  remote.py
diagram_analysis/: __init__.py  analysis_json.py  analysis_patcher.py  diagram_generator.py  ease.py  file_coverage.py  incremental_models.py  incremental_payload.py  incremental_pipeline.py  incremental_tracer.py  incremental_updater.py  io_utils.py  run_context.py  run_metadata.py  scope_planner.py
docs/development/: architecture.md
health/checks/: function_size.py  unused_code_diagnostics.py
monitoring/: paths.py
repo_utils/: __init__.py  change_detector.py  diff_parser.py  git_ops.py  ignore.py
static_analyzer/: __init__.py  analysis_cache.py  analysis_result.py  cfg_skip_planner.py  cluster_helpers.py  constants.py  cosmetic_diff.py  csharp_config_scanner.py  graph.py  graph_query.py  incremental_orchestrator.py  java_utils.py  method_fingerprint.py  node.py  scanner.py  semantic_diff.py  tree_sitter_parsers.py
static_analyzer/engine/: __init__.py  call_graph_builder.py  edge_build_context.py  edge_builder.py  hierarchy_builder.py  language_adapter.py  lsp_client.py  lsp_constants.py  models.py  progress.py  protocols.py  result_converter.py  source_inspector.py  symbol_table.py  utils.py
tests/: test_cli_parser.py  test_github_action.py  test_install.py  test_logging_config.py  test_main.py  test_pyproject_packages.py  test_registry_coverage.py  test_tool_registry.py  test_user_config.py  test_windows_compatibility.py
tests/agents/: test_abstraction_agent.py  test_agent.py  test_cluster_methods_mixin.py  test_details_agent.py  test_llm_config.py  test_meta_agent.py  test_method_uniqueness.py  test_model_capabilities.py  test_planner_agent.py  test_retry.py  test_validation.py
tests/codeboarding_workflows/: test_analysis.py  test_incremental.py
tests/diagram_analysis/: test_analysis_patcher.py  test_component_prune.py  test_diagram_analysis.py  test_ease.py  test_incremental_cli.py  test_incremental_method_diff_integration.py  test_incremental_tracer.py  test_incremental_tracer_plan.py  test_run_context.py  test_scope_planner.py
tests/health/: test_health_checks.py  test_unused_code_diagnostics.py
tests/integration/: benchmark_static_analysis.py  conftest.py  test_lsp_analysis_for_edge_cases.py  test_model_capabilities_live.py  test_static_analysis_consistency.py
tests/repo_utils/: test_diff_parser.py  test_ignore.py  test_method_diff.py
tests/static_analyzer/: test_analysis_cache.py  test_analysis_cache_paths.py  test_call_graph_builder.py  test_cfg_skip_planner.py  test_cluster_helpers.py  test_csharp_adapter.py  test_csharp_config_scanner.py  test_discover_file_dependencies.py  test_edge_builder.py  test_engine_edge_quality.py  test_go_adapter.py  test_graph.py  test_hierarchy_builder.py  test_incremental_orchestrator.py  test_java_config_scanner.py  test_java_utils.py  test_lsp_client.py  test_project_scanner.py  test_reference_resolve_mixin.py  test_reference_resolve_real_refs.py  test_result_converter.py  test_rust_adapter.py  test_semantic_diff.py  test_source_inspector.py  test_static_analyzer_start_clients.py  test_symbol_table.py  test_utils.py
tool_registry/: __init__.py  installers.py  manifest.py  paths.py  registry.py
(+74 files in other folders)
