[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeboarding"
version = "0.11.0"
description = "Interactive Diagrams for Code"
readme = "PYPI.md"
license = "MIT"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "CodeBoarding Team"}
]
keywords = ["code-understanding", "code-visualization", "code-analysis", "diagrams", "documentation", "llm", "static-analysis", "mermaid", "onboarding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "docker>=7.1",
    "dotenv>=0.9",
    "duckdb>=1.3",
    "dulwich>=0.22",
    "fastapi>=0.115",
    "filelock>=3.12",
    "gitpython>=3.1",
    "google-api-core>=2.10",
    "jsonpatch>=1.33",
    "jsonschema>=4.25",
    "langchain>=1.2",
    "langchain-anthropic>=1.3",
    "langchain-aws>=1.1",
    "langchain-cerebras>=0.8",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.1",
    "langchain-ollama>=1.0",
    "langchain-openai>=1.1",
    "markdown>=3.8",
    "markdown-it-py>=3.0",
    "markitdown>=0.1",
    "networkx>=3.4",
    "nodeenv>=1.10.0",
    "pathspec>=0.12",
    "pyyaml>=6.0",
    "regex>=2024.11",
    "rich>=12.6",
    "tree-sitter>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-php>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-typescript>=0.23",
    "trustcall>=0.0.39",
    "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=7.0", "black>=25.9", "mypy>=1.19", "pre-commit>=3.8"]
all = [
    "codeboarding[dev]",
    "pylint>=3.3",
    "pyright>=1.1",
    "pyinstaller>=6.13",
    "memory-profiler>=0.61",
]

[tool.setuptools]
packages = [
    "agents",
    "agents.prompts",
    "agents.tools",
    "core",
    "diagram_analysis",
    "health",
    "health.checks",
    "monitoring",
    "output_generators",
    "repo_utils",
    "static_analyzer",
    "static_analyzer.engine",
    "static_analyzer.engine.adapters",
    "static_analyzer.lsp_client",
    "caching",
    "tool_registry",
    "codeboarding_cli",
    "codeboarding_cli.commands",
    "codeboarding_workflows",
    "codeboarding_workflows.sources",
]
py-modules = [
    "constants",
    "utils",
    "vscode_constants",
    "logging_config",
    "duckdb_crud",
    "github_action",
    "user_config",
    "main",
    "install",
]
include-package-data = true

[project.scripts]
codeboarding = "main:main"
codeboarding-setup = "install:main"

[project.urls]
Repository = "https://github.com/CodeBoarding/CodeBoarding"
Documentation = "https://github.com/CodeBoarding/CodeBoarding/blob/main/.codeboarding/overview.md"

[[tool.uv.index]]
name = "pypi"
default = true
url = "https://pypi.org/simple"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = "(?x)(^repos/|^build/|^dist/|^temp/|^static_analyzer/servers/|^tests/integration/projects/)"
explicit_package_bases = true
disable_error_code = ["import-untyped", "no-any-return", "assignment"]

[tool.uv]
dev-dependencies = [
    "black==25.9.0",
    "pre-commit==3.8.0",
    "mypy==1.19.0",
    "pytest-cov==7.0.0",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["repos", "build", "dist", "temp", "node_modules"]
addopts = "--ignore=repos"
pythonpath = "."
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "health: marks tests as health check integration tests",
    "python_lang: marks tests for Python language",
    "java_lang: marks tests for Java language",
    "go_lang: marks tests for Go language",
    "typescript_lang: marks tests for TypeScript language",
    "php_lang: marks tests for PHP language",
    "javascript_lang: marks tests for JavaScript language",
    "rust_lang: marks tests for Rust language",
    "csharp_lang: marks tests for C# language",
]
